k8s/hocuspocus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hocuspocus-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hocuspocus
  template:
    metadata:
      labels:
        app: hocuspocus
    spec:
      containers:
      - name: hocuspocus
        image: team-utkarsh/synapse-backend:latest
        ports:
        - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  name: hocuspocus-service
spec:
  type: ClusterIP
  selector:
    app: hocuspocus
  ports:
  - port: 1234
    targetPort: 1234
